Newly changed from other branch

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         similarly for any bug I can define a branch 
     -->
     <div>
-        <p>Hello World!!!</p>
+        <p>Hello World!!! This fixes my issue!!!</p>
     </div>
 </body>
 </html>
